--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ tokio = { version = "1", features = ["full"] }
 tracing = "0.1.34"
 tracing-subscriber = "0.3.11"
 axum = "0.5.6"
+hyper = {version = "0.14.19", features = ["full"]}
+hyper-tls = "0.5.0"
 tower = "0.4.12"
 tower-service = "0.3.1"
 tower-http = {version = "0.3.3", features = ["cors"]}
@@ -20,9 +22,8 @@ serde = { version = "1.0.134", features = ["derive"] }
 serde_json = "*"
 sqlx = { version = "*", features = [
     "postgres",
-    "runtime-tokio-rustls",
+    "runtime-tokio-native-tls",
     "macros",
     "chrono",
 ] }
-rustls = "0.20.4"
 rand = "*"
