--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,20 +6,19 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1.19.2", features = ["full"] }
 tracing = "0.1.34"
 tracing-subscriber = "0.3.11"
-axum = "0.5.6"
 hyper = {version = "0.14.19", features = ["full"]}
 hyper-tls = "0.5.0"
-tower = "0.4.12"
-tower-service = "0.3.1"
-tower-http = {version = "0.3.3", features = ["cors"]}
+tower = "0.4.13"
+tower-service = "0.3.2"
+tower-http = {version = "0.3.4", features = ["cors"]}
 chrono = { version = "*", features = ["serde"] }
 dotenv = "*"
-openssl = { version = "0.10.38", features = ["vendored"] }
 serde = { version = "1.0.134", features = ["derive"] }
 serde_json = "*"
+axum = "0.5.9"
 sqlx = { version = "*", features = [
     "postgres",
     "runtime-tokio-native-tls",
@@ -28,3 +27,7 @@ sqlx = { version = "*", features = [
 ] }
 rand = "*"
 xxhash-rust = {version = "0.8.5", features=["xxh64"]}
+meilisearch-sdk = "0.17.0"
+redis = { version = "0.21.5", features = ["aio","tokio-comp","connection-manager"] }
+uuid={version = "*", features = ["v4","fast-rng"]}
+url = "2.2.2"
